--- a/Readme
+++ b/Readme
@@ -1,1 +1,14 @@
 File to test how commiting to a repository works
+    int maze[13][13] = {{-1, -1, -1, -1, 0, -1, 0, -1, 0, -1, -1, -1, -1},
+                        {-1, -1, -1, -1, 0, -1, 0, -1, 0, -1, -1, -1, -1},
+                        {-1, -1,  0,  0, 0,  0, 0,  0, 0,  0,  0, -1, -1},
+                        {-1, -1,  0, -1, 0, -1, 0, -1, 0, -1,  0, -1, -1},
+                        { 0,  0,  0,  0, 0,  0, 0,  0, 0,  0,  0,  0,  0},
+                        {-1, -1,  0, -1, 0, -1, 0, -1, 0, -1,  0, -1, -1},
+                        { 0,  0,  0,  0, 0,  0, 0,  0, 0,  0,  0,  0,  0},
+                        {-1, -1,  0, -1, 0, -1, 0, -1, 0, -1,  0, -1, -1},
+                        { 0,  0,  0,  0, 0,  0, 0,  0, 0,  0,  0,  0,  0},
+                        {-1, -1,  0, -1, 0, -1, 0, -1, 0, -1,  0, -1, -1},
+                        {-1, -1,  0,  0, 0,  0, 0,  0, 0,  0,  0, -1, -1},
+                        {-1, -1, -1, -1, 0, -1, 0, -1, 0, -1, -1, -1, -1},
+                        {-1, -1, -1, -1, 0, -1, 0, -1, 0, -1, -1, -1, -1}};
